feat: send account QR for funnel DM action
